fixed setup for gh-pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lcg_gshs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hyunjun06.github.io/lcg_gshs/#",
+  "homepage": "https://hyunjun06.github.io/lcg_gshs/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
